2003-12-01  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-toc-pager.c:
	- Changed the way toc nodes are processed to give a depth-first,
	  post-order traversal.  This way I can prune empty toc pages.

2003-12-01  Shaun McCance  <shaunm@gnome.org>

	* data/toc.xml.in:
	- Handling all SK categories, from mariano.

	* src/yelp-window.c:
	- Start with Loading..., so the titlebar doesn't look like ass.

2003-12-01  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-window.c:
	- Make the Loading message kind of animated, for better feedback.

2003-12-01  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-toc-pager.c:
	- Switched to using a single pending function that calls the appropriate
	  function on each iteration.  Makes the code nicer.

2003-11-30  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-window.c:
	- Make no-sidebar the default, to avoid momentary flicker.

2003-11-30  Shaun McCance  <shaunm@gnome.org>

	* data/toc.xml.in:
	- Some work on the TOC.

	* src/yelp-db-pager.c:
	- Actually use the parser options.

2003-11-30  Shaun McCance  <shaunm@gnome.org>

	* data/toc.xml.in:
	- Implementing more of the TOC.

	* src/yelp-toc-pager.c:
	- Don't reverse the subcategories in a TOC.

	* src/yelp-window.c:
	- Make the sidebar actually appear.

2003-11-30  Shaun McCance  <shaunm@gnome.org>

	- Some changes I forgot to commit on transformation-playground before merging.

	* src/yelp-db-pager.c:
	- Some changes to how the XML parser is called.

	* src/yelp-toc-pager.c:
	- Actually creating the TOC pages.

2003-11-30  Shaun McCance  <shaunm@gnome.org>

	* configure.in:
	* data/Makefile.am:
	* po/POTFILES.in:
	* src/Makefile.am:
	* src/test-uri.c:
	* src/yelp-base.c:
	* src/yelp-cache.c:
	* src/yelp-cache.c:
	* src/yelp-cache.h:
	* src/yelp-db2html.c:
	* src/yelp-error.h:
	* src/yelp-history.c:
	* src/yelp-html-gtkhtml2.c:
	* src/yelp-info.c:
	* src/yelp-main.c:
	* src/yelp-man.c:
	* src/yelp-scrollkeeper.c:
	* src/yelp-section.c:
	* src/yelp-uri.c:
	* src/yelp-uri.h: