@@ -1,3 +1,8 @@
+2003-12-02  Shaun McCance  <shaunm@gnome.org>
+
+	* src/yelp-db-pager.c:
+	- Don't require top element id to be index.
+
 2003-12-01  Shaun McCance  <shaunm@gnome.org>
 
 	* src/yelp-toc-pager.c:
